--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="src/assets/imgs/J.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="src/assets/imgs/logo.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Kufam&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
-  <title>Vite + Vue</title>
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="theme-color" content="#01005F" />
+  <link rel="manifest" href="/manifest.json" />
+  <link href="https://fonts.googleapis.com/css2?family=Kufam&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet" />
+  <link rel="icon" type="image/png" href="src/assets/imgs/logo.png" />
+  <meta property="og:title" content="JAMAAT - منصتك للألعاب" />
+  <meta property="og:description"
+    content="تجربة ألعاب فريدة، تحميل مباشر، وسهولة في الاستخدام. انضم إلى عالم JAMAAT الآن!" />
+  <meta property="og:image" content="src/assets/imgs/logo.png" />
+  <meta property="og:url" content="https://jamaat-gilt.vercel.app/" />
+  <meta property="og:type" content="website" />
+  <title>JAMAAT - منصتك للألعاب</title>
 </head>
 
 <body>
