--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="/manifest.json" />
   <link href="https://fonts.googleapis.com/css2?family=Kufam&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet" />
-  <link rel="icon" type="image/png" href="src/assets/imgs/logo.png" />
+  <link rel="icon" type="image/png" href="src/assets/imgs/j.png" />
   <meta property="og:title" content="JAMAAT - منصتك للألعاب" />
   <meta property="og:description"
     content="تجربة ألعاب فريدة، تحميل مباشر، وسهولة في الاستخدام. انضم إلى عالم JAMAAT الآن!" />
