--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="JAMAAT - منصتك للألعاب" />
   <meta property="og:description"
     content="تجربة ألعاب فريدة، تحميل مباشر، وسهولة في الاستخدام. انضم إلى عالم JAMAAT الآن!" />
-  <meta property="og:image" content="src/assets/imgs/logo.png" />
+  <meta property="og:image" content="src/assets/imgs/j.png" />
   <meta property="og:url" content="https://jamaat-gilt.vercel.app/" />
   <meta property="og:type" content="website" />
   <title>JAMAAT - منصتك للألعاب</title>
