--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="theme-color" content="#01005F" />
-  <link rel="manifest" href="/manifest.json" />
+  <!-- <link rel="manifest" href="/manifest.json" /> -->
   <link href="https://fonts.googleapis.com/css2?family=Kufam&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet" />
   <link rel="icon" type="image/png" href="src/assets/imgs/j.png" />
