--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!doctype html>
-<html lang="en">
+<html lang="ar">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="JAMAAT: منصة ألعاب فريدة، تحميل مباشر وسهولة في الاستخدام. انضم الآن لعالم الألعاب الممتع!">
+  <meta name="keywords" content="ألعاب, تحميل ألعاب, منصة ألعاب, JAMAAT" />
+  <meta property="og:image" content="https://jamaat-gilt.vercel.app/src/assets/imgs/j.png" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="theme-color" content="#01005F" />
   <!-- <link rel="manifest" href="/manifest.json" /> -->
-  <link href="https://fonts.googleapis.com/css2?family=Kufam&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet" />
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Kufam&display=swap" as="style"
+    onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" as="style"
+    onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link href="https://fonts.googleapis.com/css2?family=Kufam&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
+  </noscript>
   <link rel="icon" type="image/png" href="src/assets/imgs/j.png" />
   <meta property="og:title" content="JAMAAT - منصتك للألعاب" />
   <meta property="og:description"
     content="تجربة ألعاب فريدة، تحميل مباشر، وسهولة في الاستخدام. انضم إلى عالم JAMAAT الآن!" />
-  <meta property="og:image" content="src/assets/imgs/j.png" />
+  <meta property="og:image" content="https://jamaat-gilt.vercel.app/src/assets/imgs/j.png" />
   <meta property="og:url" content="https://jamaat-gilt.vercel.app/" />
   <meta property="og:type" content="website" />
   <title>JAMAAT - منصتك للألعاب</title>
