--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html lang="ar">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="JAMAAT: منصة ألعاب فريدة، تحميل مباشر وسهولة في الاستخدام. انضم الآن لعالم الألعاب الممتع!">
+    content="JAMAAT: منصة عربية مخصصة للألعاب التعليمية والترفيهية. استمتع بتحميل مباشر، تجربة سهلة، وتحديات يومية. انضم الآن مجانًا!">
   <meta name="keywords" content="ألعاب, تحميل ألعاب, منصة ألعاب, JAMAAT" />
   <meta property="og:image" content="https://jamaat-gilt.vercel.app/src/assets/imgs/j.png" />
   <meta name="mobile-web-app-capable" content="yes" />
@@ -27,12 +26,10 @@
   <meta property="og:image" content="https://jamaat-gilt.vercel.app/src/assets/imgs/j.png" />
   <meta property="og:url" content="https://jamaat-gilt.vercel.app/" />
   <meta property="og:type" content="website" />
-  <title>JAMAAT - منصتك للألعاب</title>
+  <title>JAMAAT | منصة الألعاب العربية - تحميل مباشر وتجربة فريدة</title>
 </head>
-
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
-
 </html>
