--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kufam&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
   </noscript>
-  <link rel="icon" type="image/png" href="src/assets/imgs/j.png" />
+  <link rel="icon" type="image/png" href="J.svg" />
   <meta property="og:title" content="JAMAAT - منصتك للألعاب" />
   <meta property="og:description"
     content="تجربة ألعاب فريدة، تحميل مباشر، وسهولة في الاستخدام. انضم إلى عالم JAMAAT الآن!" />
