upload some edites

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="ar">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,10 +12,12 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="theme-color" content="#01005F" />
   <!-- <link rel="manifest" href="/manifest.json" /> -->
+  <!-- خطوط preload -->
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Kufam&display=swap" as="style"
     onload="this.onload=null;this.rel='stylesheet'">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" as="style"
     onload="this.onload=null;this.rel='stylesheet'">
+  <link href="https://fonts.cdnfonts.com/css/andalus" rel="stylesheet">
   <noscript>
     <link href="https://fonts.googleapis.com/css2?family=Kufam&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
@@ -28,8 +31,10 @@
   <meta property="og:type" content="website" />
   <title>JAMAAT | منصة الألعاب العربية - تحميل مباشر وتجربة فريدة</title>
 </head>
+
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
+
 </html>
